Fix overflowing banner images

--- a/app/assets/stylesheets/static.scss
+++ b/app/assets/stylesheets/static.scss
@@ -31,7 +31,6 @@
 }
 
 .container.header-image {
-  padding: 0;
   .img-fluid {
     width: 100%;
   }
